# p12nt-svc-curriculum-ingestion

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirement.md
app/: config.py  main.py  utils.py
app/application/usecase/: __init__.py  convert_pdf_to_markdown_usecase.py  curriculum_node_resolver.py  get_curriculum_hierarchy_item_usecase.py  get_curriculum_usecase.py  get_grade_level_summary_report_usecase.py  get_grade_level_usecase.py  get_modality_usecase.py  get_study_program_ref_usecase.py  get_study_program_usecase.py  get_subject_summary_report_usecase.py  get_subject_usecase.py  ingest_curriculum_usecase.py  list_curriculum_hierarchy_item_usecase.py  list_curriculums_usecase.py  list_grade_level_detail_report_usecase.py  list_grade_level_report_usecase.py  list_grade_levels_usecase.py  list_modalities_usecase.py  list_study_program_refs_usecase.py  list_study_programs_usecase.py  list_subject_detail_report_usecase.py  list_subjects_usecase.py  study_program_resolver.py  (+1 more)
app/domain/: exceptions.py
app/infrastructure/: database.py
tests/: __init__.py  conftest.py  test_beautiful_soup_builder.py  test_cli_refresh.py  test_convert_pdf_to_markdown_usecase.py  test_curriculum_mapper.py  test_curriculum_repository_adapter.py  test_domain_and_config.py  test_external_adapters.py  test_hierarchy_mapper_provider.py  test_id_generator.py  test_main.py  test_node_parser_provider.py  test_parsers.py  test_repository_provider.py  test_usecase_and_cli.py  test_web_endpoints.py
tests/app/: test_log_execution_time.py  test_main.py  test_settings.py
tests/infrastructure/: test_database.py
(+273 files in other folders)
