[project]
name = "p12nt-svc-curriculum-ingestion"
version = "0.1.0"
description = "Servicio backend de curriculum-ingestion en la plataforma 12NT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.100.0",
    "markitdown[pdf]>=0.1.6",
    "psycopg2-binary>=2.9.6",
    "pydantic>=2.0.0",
    "pydantic-ai[google,openai]>=2.1.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.27.2.3",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "uv>=0.11.19",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
